5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3989/executions/1671_1103.log
== TEST (2019-04-23 20:01:14) 
-- CODE:
x = input(float("Digite um numero:"))
a = input(float("Digite um numero"))
b = input(float("Digite um numero"))

if ((a<= x) and (x<=b)):
	print("x pertence ao intervalo a, b")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x = input(float("Digite um numero:"))
ValueError: could not convert string to float: 'Digite um numero:'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 20:01:35) 
-- CODE:
x = input(float("Digite um numero:"))
a = input(float("Digite um numero:"))
b = input(float("Digite um numero:"))

if ((a<= x) and (x<=b)):
	print("x pertence ao intervalo a, b")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x = input(float("Digite um numero:"))
ValueError: could not convert string to float: 'Digite um numero:'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 20:02:10) 
-- CODE:
x = input(float(" "))
a = input(float(" "))
b = input(float(" "))

if ((a<= x) and (x<=b)):
	print("x pertence ao intervalo a, b")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x = input(float(" "))
ValueError: could not convert string to float:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 20:02:31) 
-- CODE:
x = input(float(" "))
a = input(float(" "))
b = input(float(" "))

if ((a<= x) and (x<=b)):
	print("x pertence ao intervalo a, b")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x = input(float(" "))
ValueError: could not convert string to float:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 20:02:53) 
-- CODE:

a = input(float(" "))
b = input(float(" "))

if ((a<= x) and (x<=b)):
	print("x pertence ao intervalo a, b")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    a = input(float(" "))
ValueError: could not convert string to float:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 20:03:33) 
-- CODE:
x = float(input(""))

if ((a<= x) and (x<=b)):
	print("x pertence ao intervalo a, b")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if ((a<= x) and (x<=b)):
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 20:03:49) 
-- CODE:
x = float(input(""))
a = float(input(""))

if ((a<= x) and (x<=b)):
	print("x pertence ao intervalo a, b")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if ((a<= x) and (x<=b)):
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 20:04:06) 
-- CODE:
x = float(input(""))
a = float(input(""))
b = float(input(""))

if ((a<= x) and (x<=b)):
	print("x pertence ao intervalo a, b")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if ((a<= x) and (x<=b)):
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 20:04:50) 
-- CODE:
x = float(input(""))
a = float(input(""))
b = float(input(""))

if ((a<= x) and (x<=b)):
	print (x "pertence ao intervalo" a, b)
-- ERROR:
File "XXXX", line 6
    print (x "pertence ao intervalo" a, b)
                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 20:05:03) 
-- CODE:
x = float(input(""))
a = float(input(""))
b = float(input(""))

if ((a<= x) and (x<=b)):
	print (x "pertence ao intervalo")
-- ERROR:
File "XXXX", line 6
    print (x "pertence ao intervalo")
                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 20:05:47) 
-- CODE:
x = float(input(""))
a = float(input(""))
b = float(input(""))

if ((a<= x) and (x<=b)):
	print (x "pertence ao intervalo" a, b)
-- ERROR:
File "XXXX", line 6
    print (x "pertence ao intervalo" a, b)
                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 20:06:03) 
-- CODE:
x = float(input(""))
a = float(input(""))
b = float(input(""))

if ((a<= x) and (x<=b)):
	print (x, "pertence ao intervalo", a, b)
-- ERROR:
File "XXXX", line 6
    print (x "pertence ao intervalo" a, b)
                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 20:06:29) 
-- CODE:
x = float(input(""))
a = float(input(""))
b = float(input(""))

if ((a<= x) and (x<=b)):
	print (x, "pertence ao intervalo", a,, b)
-- ERROR:
File "XXXX", line 6
    print (x, "pertence ao intervalo", a,, b)
                                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 20:06:46) 
-- CODE:
x = float(input(""))
a = float(input(""))
b = float(input(""))

if ((a<= x) and (x<=b)):
	print (x, "pertence ao intervalo", a , b)
-- ERROR:
File "XXXX", line 6
    print (x, "pertence ao intervalo", a,, b)
                                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 20:07:37) 
-- CODE:
x = float(input(""))
a = float(input(""))
b = float(input(""))

if ((a<= x) and (x<=b)):
	print (x, "pertence ao intervalo", a "," b)
-- ERROR:
File "XXXX", line 6
    print (x, "pertence ao intervalo", a "," b)
                                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 20:07:49) 
-- CODE:
x = float(input(""))
a = float(input(""))
b = float(input(""))

if ((a<= x) and (x<=b)):
	print (x "pertence ao intervalo", a "," b)
-- ERROR:
File "XXXX", line 6
    print (x "pertence ao intervalo", a "," b)
                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 20:08:00) 
-- CODE:
x = float(input(""))
a = float(input(""))
b = float(input(""))

if ((a<= x) and (x<=b)):
	print (x, "pertence ao intervalo", a "," b)
-- ERROR:
File "XXXX", line 6
    print (x, "pertence ao intervalo", a "," b)
                                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 20:08:32) 
-- CODE:
x = float(input(""))
a = float(input(""))
b = float(input(""))

if ((a<= x) and (x<=b)):
	print (x, "pertence ao intervalo", a ",",  b)
-- ERROR:
File "XXXX", line 6
    print (x, "pertence ao intervalo", a ",",  b)
                                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 20:08:41) 
-- CODE:
x = float(input(""))
a = float(input(""))
b = float(input(""))

if ((a<= x) and (x<=b)):
	print (x, "pertence ao intervalo", a  b)
-- ERROR:
File "XXXX", line 6
    print (x, "pertence ao intervalo", a  b)
                                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 20:08:49) 
-- CODE:
x = float(input(""))
a = float(input(""))
b = float(input(""))

if ((a<= x) and (x<=b)):
	print (x, "pertence ao intervalo", a , b)
-- ERROR:
File "XXXX", line 6
    print (x, "pertence ao intervalo", a  b)
                                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 20:09:18) 
-- CODE:
x = float(input(""))
a = float(input(""))
b = float(input(""))

if ((a<= x) and (x<=b)):
	print (x, "pertence ao intervalo", a ,"" b)
-- ERROR:
File "XXXX", line 6
    print (x, "pertence ao intervalo", a ,"" b)
                                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 20:09:39) 
-- CODE:
x = float(input(""))
a = float(input(""))
b = float(input(""))

if ((a<= x) and (x<=b)):
	print (x, "pertence ao intervalo", a "," b)
-- ERROR:
File "XXXX", line 6
    print (x, "pertence ao intervalo", a "," b)
                                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 20:09:50) 
-- CODE:
x = float(input(""))
a = float(input(""))
b = float(input(""))

if ((a<= x) and (x<=b)):
	print (x, "pertence ao intervalo", a b)
-- ERROR:
File "XXXX", line 6
    print (x, "pertence ao intervalo", a b)
                                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 20:09:57) 
-- CODE:
x = float(input(""))
a = float(input(""))
b = float(input(""))

if ((a<= x) and (x<=b)):
	print (x, "pertence ao intervalo", a, b)
-- ERROR:
File "XXXX", line 6
    print (x, "pertence ao intervalo", a b)
                                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 20:10:17) 
-- CODE:
x = float(input(""))
a = float(input(""))
b = float(input(""))

if ((a<= x) and (x<=b)):
	print (x, "pertence ao intervalo", a "", b)
-- ERROR:
File "XXXX", line 6
    print (x, "pertence ao intervalo", a "", b)
                                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 20:10:25) 
-- CODE:
x = float(input(""))
a = float(input(""))
b = float(input(""))

if ((a<= x) and (x<=b)):
	print (x, "pertence ao intervalo", a ",," b)
-- ERROR:
File "XXXX", line 6
    print (x, "pertence ao intervalo", a ",," b)
                                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 20:10:35) 
-- CODE:
x = float(input(""))
a = float(input(""))
b = float(input(""))

if ((a<= x) and (x<=b)):
	print (x, "pertence ao intervalo" a "," b)
-- ERROR:
File "XXXX", line 6
    print (x, "pertence ao intervalo" a "," b)
                                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 20:11:59) 
-- CODE:
x = float(input(""))
a = float(input(""))
b = float(input(""))

if ((a<= x) and (x<=b)):
	print (x, "pertence ao intervalo", a "," b)
-- ERROR:
File "XXXX", line 6
    print (x, "pertence ao intervalo", a "," b)
                                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 20:12:07) 
-- CODE:
x = float(input(""))
a = float(input(""))
b = float(input(""))

if ((a<= x) and (x<=b)):
	print (x, "pertence ao intervalo", a , b)
-- ERROR:
File "XXXX", line 6
    print (x, "pertence ao intervalo", a "," b)
                                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 20:12:31) 
-- CODE:
x = float(input(""))
a = float(input(""))
b = float(input(""))

if ((a<= x) and (x<=b)):
	print (x, "pertence ao intervalo", a str , b)
-- ERROR:
File "XXXX", line 6
    print (x, "pertence ao intervalo", a str , b)
                                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 20:13:57) 
-- CODE:
x = float(input(""))
a = float(input(""))
b = float(input(""))

if ((a<= x) and (x<=b)):
	print (x, "pertence ao intervalo", a ," b)
-- ERROR:
File "XXXX", line 6
    print (x, "pertence ao intervalo", a ," b)
                                             ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 20:14:40) 
-- CODE:
x = float(input(""))
a = float(input(""))
b = float(input(""))

if ((a<= x) and (x<=b)):
	print (x, "pertence ao intervalo", a, ",", b)
-- ERROR:
File "XXXX", line 6
    print (x, "pertence ao intervalo", a ," b)
                                             ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 20:16:30) 
-- CODE:
x = float(input(""))
a = float(input(""))
b = float(input(""))

if ((a<= x) and (x<=b)):
	print (x, "pertence ao intervalo", a, ",", b)
else:
	print(x, "não pertence ao intervalo", a, ",", b)
-- OUTPUT:
2.0 não pertence ao intervalo 3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 20:18:06) 
-- CODE:
x = float(input(""))
a = float(input(""))
b = float(input(""))

if ((a<= x) and (x<=b)):
	print (x, "pertence ao intervalo", a, ",", b)
else:
	print(x, (x, "nao pertence ao intervalo", a, ", ", b)
			
-- ERROR:
File "XXXX", line 10
    
       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 20:18:36) 
-- CODE:
x = float(input(""))
a = float(input(""))
b = float(input(""))

if ((a<= x) and (x<=b)):
	print (x, "pertence ao intervalo", a, ",", b)
else:
	print(x, "nao pertence ao intervalo", a, ",",b)
	
-- OUTPUT:
2.0 nao pertence ao intervalo 3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 20:20:05) 
-- CODE:
x = float(input(""))
a = float(input(""))
b = float(input(""))

if ((a<= x) and (x<=b)):
	print (x, "pertence ao intervalo", a, ",", b)
else:
	print(x, "nao pertence ao intervalo", a, ",",b)
elif (b<=a):
	print("Entradas", a e b "invalidas")
	
-- ERROR:
File "XXXX", line 9
    elif (b<=a):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 20:21:25) 
-- CODE:
x = float(input(""))
a = float(input(""))
b = float(input(""))

if ((a<= x) and (x<=b)):
	print (x, "pertence ao intervalo", a, ",", b)
elif:
	print(x, "nao pertence ao intervalo", a, ",",b)

	
-- ERROR:
File "XXXX", line 7
    elif:
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 20:21:33) 
-- CODE:
x = float(input(""))
a = float(input(""))
b = float(input(""))

if ((a<= x) and (x<=b)):
	print (x, "pertence ao intervalo", a, ",", b)
else:
	print(x, "nao pertence ao intervalo", a, ",",b)

	
-- OUTPUT:
2.0 nao pertence ao intervalo 3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 20:21:55) 
-- CODE:
x = float(input(""))
a = float(input(""))
b = float(input(""))

if ((a<= x) and (x<=b)):
	print (x, "pertence ao intervalo", a, ",", b)
else:
	print(x, "nao pertence ao intervalo", a, ",",b)

	
-- EXECUTION TIME:
0.207283
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
2.0 nao pertence ao intervalo 3.0 , 4.0
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
5.5 nao pertence ao intervalo 6.5 , 3.5
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 pertence ao intervalo 1.1 , 22.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 20:23:04) 
-- CODE:
x = float(input(""))
a = float(input(""))
b = float(input(""))

if ((a<= x) and (x<=b)):
	print (x, "pertence ao intervalo", a, ",", b)
else:
	print(x, "nao pertence ao intervalo", a, ",",b)
else:
	print("Entradas", a, ",", b "invalidas")
-- ERROR:
File "XXXX", line 9
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 20:24:13) 
-- CODE:
x = float(input(""))
a = float(input(""))
b = float(input(""))

if ((a<= x) and (x<=b)):
	print (x, "pertence ao intervalo", a, ",", b)
elif((a>=x) and (x>=b):
	print(x, "nao pertence ao intervalo", a, ",",b)

-- ERROR:
File "XXXX", line 7
    elif((a>=x) and (x>=b):
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 20:24:22) 
-- CODE:
x = float(input(""))
a = float(input(""))
b = float(input(""))

if ((a<= x) and (x<=b)):
	print (x, "pertence ao intervalo", a, ",", b)
elif((a>=x) and (x>=b)):
	print(x, "nao pertence ao intervalo", a, ",",b)

-- ERROR:
File "XXXX", line 7
    elif((a>=x) and (x>=b):
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 20:25:18) 
-- CODE:
x = float(input(""))
a = float(input(""))
b = float(input(""))

if ((a<= x) and (x<=b)):
	print (x, "pertence ao intervalo", a, ",", b)
elif((a>=x) and (x>=b)):
	print(x, "nao pertence ao intervalo", a, ",",b)
else:
	print("Entradas", a e b, "invalidas")
-- ERROR:
File "XXXX", line 10
    print("Entradas", a e b, "invalidas")
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 20:25:44) 
-- CODE:
x = float(input(""))
a = float(input(""))
b = float(input(""))

if ((a<= x) and (x<=b)):
	print (x, "pertence ao intervalo", a, ",", b)
elif((a>=x) and (x>=b)):
	print(x, "nao pertence ao intervalo", a, ",",b)
else:
	print("Entradas", a ", ", b, "invalidas")
-- ERROR:
File "XXXX", line 10
    print("Entradas", a ", ", b, "invalidas")
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 20:27:21) 
-- CODE:
x = float(input(""))
a = float(input(""))
b = float(input(""))

if ((a<= x) and (x<=b)):
	print (x, "pertence ao intervalo", a, ",", b)
elif((a>=x) and (x>=b)):
	print(x, "nao pertence ao intervalo", a, ",",b)
elif (b<=a):
	print("Entradas", a, ",", b "invalidas)
	
-- ERROR:
File "XXXX", line 10
    print("Entradas", a, ",", b "invalidas)
                                          ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 20:27:30) 
-- CODE:
x = float(input(""))
a = float(input(""))
b = float(input(""))

if ((a<= x) and (x<=b)):
	print (x, "pertence ao intervalo", a, ",", b)
elif((a>=x) and (x>=b)):
	print(x, "nao pertence ao intervalo", a, ",",b)
elif (b<=a):
	print("Entradas", a, ",", b "invalidas")
	
-- ERROR:
File "XXXX", line 10
    print("Entradas", a, ",", b "invalidas")
                                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 20:27:44) 
-- CODE:
x = float(input(""))
a = float(input(""))
b = float(input(""))

if ((a<= x) and (x<=b)):
	print (x, "pertence ao intervalo", a, ",", b)
elif((a>=x) and (x>=b)):
	print(x, "nao pertence ao intervalo", a, ",",b)
elif (b<=a):
	print("Entradas", a, ",", b, "invalidas")
	
-- ERROR:
File "XXXX", line 10
    print("Entradas", a, ",", b "invalidas")
                                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 20:28:26) 
-- CODE:
x = float(input(""))
a = float(input(""))
b = float(input(""))

if ((a<= x) and (x<=b)):
	print (x, "pertence ao intervalo", a, ",", b)
elif((a>=x) and (x>=b)):
	print(x, "nao pertence ao intervalo", a, ",",b)
elif (b<=a):
	print("Entradas", a, ",", b, "invalidas")
	
-- ERROR:
File "XXXX", line 10
    print("Entradas", a, ",", b "invalidas")
                                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 20:28:56) 
-- CODE:
x = float(input(""))
a = float(input(""))
b = float(input(""))

if ((a<= x) and (x<=b)):
	print (x, "pertence ao intervalo", a, ",", b)
elif((a>=x) and (x>=b)):
	print(x, "nao pertence ao intervalo", a, ",",b)
	
-- ERROR:
File "XXXX", line 10
    print("Entradas", a, ",", b "invalidas")
                                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 20:30:34) 
-- CODE:
x = float(input(""))
a = float(input(""))
b = float(input(""))

if ((a<= x) and (x<=b)):
	print (x, "pertence ao intervalo", a, ",", b)
elif((a>=x) and (x>=b)):
	print(x, "nao pertence ao intervalo", a, ",",b)
else:
	print("Entradas", a, ",", b, "invalidas"):
-- ERROR:
File "XXXX", line 10
    print("Entradas", a, ",", b, "invalidas"):
                                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 20:30:40) 
-- CODE:
x = float(input(""))
a = float(input(""))
b = float(input(""))

if ((a<= x) and (x<=b)):
	print (x, "pertence ao intervalo", a, ",", b)
elif((a>=x) and (x>=b)):
	print(x, "nao pertence ao intervalo", a, ",",b)
else:
	print("Entradas", a, ",", b, "invalidas")
-- OUTPUT:
Entradas 3.0 , 4.0 invalidas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 20:31:47) 
-- CODE:
x = float(input(""))
a = float(input(""))
b = float(input(""))

if ((a<= x) and (x<=b)):
	print (x, "pertence ao intervalo", a, ",", b)
elif((a>=x) and (x>=b)):
	print(x, "nao pertence ao intervalo", a, ",",b)
elif (b<=a):
	print("Entradas a e b invalidas")
	
-- OUTPUT:
Entradas 3.0 , 4.0 invalidas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 20:31:56) 
-- CODE:
x = float(input(""))
a = float(input(""))
b = float(input(""))

if ((a<= x) and (x<=b)):
	print (x, "pertence ao intervalo", a, ",", b)
elif((a>=x) and (x>=b)):
	print(x, "nao pertence ao intervalo", a, ",",b)
elif (b<=a):
	print("Entradas a e b invalidas")
	
-- EXECUTION TIME:
0.182837
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:

-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
5.5 nao pertence ao intervalo 6.5 , 3.5
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 pertence ao intervalo 1.1 , 22.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 20:32:08) 
-- CODE:
x = float(input(""))
a = float(input(""))
b = float(input(""))

if ((a<= x) and (x<=b)):
	print (x, "pertence ao intervalo", a, ",", b)
elif((a>=x) and (x>=b)):
	print(x, "nao pertence ao intervalo", a, ",",b)
else:
	print("Entradas a e b invalidas")
	
-- EXECUTION TIME:
0.141546
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
Entradas a e b invalidas
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
5.5 nao pertence ao intervalo 6.5 , 3.5
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 pertence ao intervalo 1.1 , 22.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 20:32:09) 
-- CODE:
x = float(input(""))
a = float(input(""))
b = float(input(""))

if ((a<= x) and (x<=b)):
	print (x, "pertence ao intervalo", a, ",", b)
elif((a>=x) and (x>=b)):
	print(x, "nao pertence ao intervalo", a, ",",b)
else:
	print("Entradas a e b invalidas")
	
-- OUTPUT:
Entradas a e b invalidas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 20:32:27) 
-- CODE:
x = float(input(""))
a = float(input(""))
b = float(input(""))

if ((a<= x) and (x<=b)):
	print (x, "pertence ao intervalo", a, ",", b)
elif((a>=x) and (x>=b)):
	print(x, "nao pertence ao intervalo", a, ",",b)
elif:
	print("Entradas a e b invalidas")
	
-- ERROR:
File "XXXX", line 9
    elif:
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 20:32:37) 
-- CODE:
x = float(input(""))
a = float(input(""))
b = float(input(""))

if ((a<= x) and (x<=b)):
	print (x, "pertence ao intervalo", a, ",", b)
elif((a>=x) and (x>=b)):
	print(x, "nao pertence ao intervalo", a, ",",b)
elif (b<=a):
	print("Entradas a e b invalidas")
	
-- ERROR:
File "XXXX", line 9
    elif:
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 20:33:34) 
-- CODE:
x = float(input(""))
a = float(input(""))
b = float(input(""))

if ((a<= x) and (x<=b)):
	print (x, "pertence ao intervalo", a, ",", b)
elif((a>=x) and (x>=b)):
	print(x, "nao pertence ao intervalo", a, ",",b)
elif (b<=a):
	print("Entradas a e b invalidas")
	
-- ERROR:
File "XXXX", line 9
    elif:
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 20:33:50) 
-- CODE:
x = float(input(""))
a = float(input(""))
b = float(input(""))

if ((a<= x) and (x<=b)):
	print (x, "pertence ao intervalo", a, ",", b)
elif((a>=x) and (x>=b)):
	print(x, "nao pertence ao intervalo", a, ",",b)
elif (b<=a):
	print("Entradas a e b invalidas")
	
-- ERROR:
File "XXXX", line 9
    elif:
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 20:34:39) 
-- CODE:
x = float(input(""))
a = float(input(""))
b = float(input(""))

if ((a<= x) and (x<=b)):
	print (x, "pertence ao intervalo", a, ",", b)
elif((a>=x) and (x>=b)):
	print(x, "nao pertence ao intervalo", a, ",",b)
else:
	print("Entradas a e b invalidas")
	
-- OUTPUT:
Entradas a e b invalidas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 20:38:26) 
-- CODE:
x = float(input(""))
a = float(input(""))
b = float(input(""))

if ((a<= x) and (x<=b)):
	print (x, "pertence ao intervalo", a, ",", b)
elif((a>=x) and (x>=b)):
	print(x, "nao pertence ao intervalo", a, ",",b)
else:
	print("Entradas a e b invalidas")
	
-- OUTPUT:
Entradas a e b invalidas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 20:38:56) 
-- CODE:
x = float(input(""))
a = float(input(""))
b = float(input(""))

if ((a<= x) and (x<=b)):
	print (x, "pertence ao intervalo", a, ",", b)
elif((a>=x) and (x>=b)):
	print(x, "nao pertence ao intervalo", a, ",",b)
elif(b<=a):
	print("Entradas a e b invalidas")
	
-- OUTPUT:
Entradas a e b invalidas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 20:40:28) 
-- CODE:
x = float(input(""))
a = float(input(""))
b = float(input(""))

if ((a<= x) and (x<=b)):
	print (x, "pertence ao intervalo", a, ",", b)
elif((a>=x) and (x>=b)):
	print(x, "nao pertence ao intervalo", a, ",",b)
elif (b<=a):
	print("Entradas a e b invalidas")
	
-- OUTPUT:
Entradas a e b invalidas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 20:41:54) 
-- CODE:
x = float(input(""))
a = float(input(""))
b = float(input(""))

if ((a<= x) and (x<=b)):
	print (x, "pertence ao intervalo", a, ",", b)
else:
	print(x, "nao pertence ao intervalo", a, ",",b)
elif (b<=a):
	print("Entradas a e b invalidas")
	
-- ERROR:
File "XXXX", line 9
    elif (b<=a):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 20:42:28) 
-- CODE:
x = float(input(""))
a = float(input(""))
b = float(input(""))

if ((a<= x) and (x<=b)):
	print (x, "pertence ao intervalo", a, ",", b)
elif((a>=x) and (x>=b)):
	print(x, "nao pertence ao intervalo", a, ",",b)
elif (b<=a):
	print("Entradas" a e b "invalidas")
	
-- ERROR:
File "XXXX", line 10
    print("Entradas" a e b "invalidas")
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 20:42:35) 
-- CODE:
x = float(input(""))
a = float(input(""))
b = float(input(""))

if ((a<= x) and (x<=b)):
	print (x, "pertence ao intervalo", a, ",", b)
elif((a>=x) and (x>=b)):
	print(x, "nao pertence ao intervalo", a, ",",b)
elif (b<=a):
	print("Entradas" a , b "invalidas")
	
-- ERROR:
File "XXXX", line 10
    print("Entradas" a , b "invalidas")
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 20:44:31) 
-- CODE:
x = float(input(""))
a = float(input(""))
b = float(input(""))

if ((a<= x) and (x<=b)):
	print (x, "pertence ao intervalo", a, ",", b)
elif((a>=x) and (x>=b)):
	print(x, "nao pertence ao intervalo", a, ",",b)
elif (a>=b):
	print("Entradas a e b invalidas")
	
	
-- ERROR:
File "XXXX", line 10
    print("Entradas" a , b "invalidas")
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 20:44:48) 
-- CODE:
x = float(input(""))
a = float(input(""))
b = float(input(""))

if ((a<= x) and (x<=b)):
	print (x, "pertence ao intervalo", a, ",", b)
elif((a>=x) and (x>=b)):
	print(x, "nao pertence ao intervalo", a, ",",b)
elif (a>=b):
	print("Entradas a e b invalidas")
	
	
-- ERROR:
File "XXXX", line 10
    print("Entradas" a , b "invalidas")
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 20:44:57) 
-- CODE:
x = float(input(""))
a = float(input(""))
b = float(input(""))

if ((a<= x) and (x<=b)):
	print (x, "pertence ao intervalo", a, ",", b)
elif((a>=x) and (x>=b)):
	print(x, "nao pertence ao intervalo", a, ",",b)
elif (a>=b):
	print("Entradas a e b invalidas")
	
	
-- EXECUTION TIME:
0.254973
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:

-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
5.5 nao pertence ao intervalo 6.5 , 3.5
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 pertence ao intervalo 1.1 , 22.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 20:45:13) 
-- CODE:
x = float(input(""))
a = float(input(""))
b = float(input(""))

if ((a<= x) and (x<=b)):
	print (x, "pertence ao intervalo", a, ",", b)
elif((a>=x) and (x>=b)):
	print(x, "nao pertence ao intervalo", a, ",",b)
elif (b<=a):
	print("Entradas a e b invalidas")
	
	
-- ERROR:
File "XXXX", line 10
    print("Entradas" a , b "invalidas")
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 20:45:36) 
-- CODE:
x = float(input(""))
a = float(input(""))
b = float(input(""))

if ((a<= x) and (x<=b)):
	print (x, "pertence ao intervalo", a, ",", b)
elif((a>=x) and (x>=b)):
	print(x, "nao pertence ao intervalo", a, ",",b)
else:
	print("Entradas a e b invalidas")
	
	
-- OUTPUT:
Entradas a e b invalidas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 13:52:07) 
-- CODE:
x = float(input(""))
a = float(input(""))
b = float(input(""))

if ((a<= x) and (x<=b)):
	print (x, "pertence ao intervalo", a, ",", b)
elif((a>=x) and (x>=b)):
	print(x, "nao pertence ao intervalo", a, ",",b)


	
-- OUTPUT:
Entradas a e b invalidas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 13:56:26) 
-- CODE:
x = float(input(""))
a = float(input(""))
b = float(input(""))

if ((a<= x) and (x<=b)):
	print (x, "pertence ao intervalo", a, ",", b)
elif((a>=x) and (x>=b)):
	print(x, "nao pertence ao intervalo", a, ",",b)


	
-- OUTPUT:
Entradas a e b invalidas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:35:10) 
-- CODE:
x = float(input(""))
a = float(input(""))
b = float(input(""))

if ((a<= x) and (x<=b)):
	print (x, "pertence ao intervalo", a, ",", b)
elif((a>=x) and (x>=b)):
	print(x, "nao pertence ao intervalo", a, ",",b)
else:
	print("Entradas", a, "e", b "invalidas")
	
	


	
-- ERROR:
File "XXXX", line 10
    print("Entradas", a, "e", b "invalidas")
                                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:35:17) 
-- CODE:
x = float(input(""))
a = float(input(""))
b = float(input(""))

if ((a<= x) and (x<=b)):
	print (x, "pertence ao intervalo", a, ",", b)
elif((a>=x) and (x>=b)):
	print(x, "nao pertence ao intervalo", a, ",",b)
else:
	print("Entradas", a, e", b "invalidas")
	
	


	
-- ERROR:
File "XXXX", line 10
    print("Entradas", a, e", b "invalidas")
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:36:47) 
-- CODE:
x = float(input(""))
a = float(input(""))
b = float(input(""))

if ((a<= x) and (x<=b)):
	print (x, "pertence ao intervalo", a, ",", b)
elif((a>=x) and (x>=b)):
	print(x, "nao pertence ao intervalo", a, ",",b)
else:
	("Entradas:", a, ",", "e", ",", b)
	
	
	
	


	
-- ERROR:
File "XXXX", line 10
    print("Entradas", a, e", b "invalidas")
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:36:59) 
-- CODE:
x = float(input(""))
a = float(input(""))
b = float(input(""))

if ((a<= x) and (x<=b)):
	print (x, "pertence ao intervalo", a, ",", b)
elif((a>=x) and (x>=b)):
	print(x, "nao pertence ao intervalo", a, ",",b)
	
	
	
	
	
	


	
-- ERROR:
File "XXXX", line 10
    print("Entradas", a, e", b "invalidas")
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:37:18) 
-- CODE:
x = float(input(""))
a = float(input(""))
b = float(input(""))

if ((a<= x) and (x<=b)):
	print (x, "pertence ao intervalo", a, ",", b)
elif((a>=x) and (x>=b)):
	print(x, "nao pertence ao intervalo", a, ",",b)
	
	
	
	
	
	


	
-- ERROR:
File "XXXX", line 10
    print("Entradas", a, e", b "invalidas")
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:37:32) 
-- CODE:
x = float(input(""))
a = float(input(""))
b = float(input(""))

if ((a<= x) and (x<=b)):
	print (x, "pertence ao intervalo", a, ",", b)
elif((a>=x) and (x>=b)):
	print(x, "nao pertence ao intervalo", a, ",",b)
	
	
	
	
	
	


	
-- ERROR:
File "XXXX", line 10
    print("Entradas", a, e", b "invalidas")
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:38:27) 
-- CODE:
x = float(input(""))
a = float(input(""))
b = float(input(""))

if ((a<= x) and (x<=b)):
	print (x, "pertence ao intervalo", a, ",", b)
elif((a>=x) and (x>=b)):
	print(x, "nao pertence ao intervalo", a, ",",b)
	
	
	
	
	


	
-- ERROR:
File "XXXX", line 10
    print("Entradas", a, e", b "invalidas")
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:45:05) 
-- CODE:
x = float(input(""))
a = float(input(""))
b = float(input(""))

if ((a<= x) and (x<=b)):
	print (x, "pertence ao intervalo", a, ",", b)
elif((a>=x) and (x>=b)):
	print(x, "nao pertence ao intervalo", a, ",",b)
else:
	print("Entradas", a, ",", b, "invalidas")

	
	
	
	
	


	
-- OUTPUT:
Entradas 3.0 , 4.0 invalidas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:45:21) 
-- CODE:
x = float(input(""))
a = float(input(""))
b = float(input(""))

if ((a<= x) and (x<=b)):
	print (x, "pertence ao intervalo", a, ",", b)
elif((a>=x) and (x>=b)):
	print(x, "nao pertence ao intervalo", a, ",",b)
else:
	print("Entradas", a, ",", b, "invalidas")

	
	
	
	
	


	
-- OUTPUT:
Entradas 3.0 , 4.0 invalidas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 14:45:27) 
-- CODE:
x = float(input(""))
a = float(input(""))
b = float(input(""))

if ((a<= x) and (x<=b)):
	print (x, "pertence ao intervalo", a, ",", b)
elif((a>=x) and (x>=b)):
	print(x, "nao pertence ao intervalo", a, ",",b)
else:
	print("Entradas", a, ",", b, "invalidas")

	
	
	
	
	


	
-- EXECUTION TIME:
0.15875
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
Entradas 3.0 , 4.0 invalidas
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
5.5 nao pertence ao intervalo 6.5 , 3.5
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 pertence ao intervalo 1.1 , 22.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:45:38) 
-- CODE:
x = float(input(""))
a = float(input(""))
b = float(input(""))

if ((a<= x) and (x<=b)):
	print (x, "pertence ao intervalo", a, ",", b)
elif((a>=x) and (x>=b)):
	print(x, "nao pertence ao intervalo", a, ",",b)
else:
	print("Entradas", a, ",", b, "invalidas")

	
	
	
	
	


	
-- OUTPUT:
Entradas 3.0 , 4.0 invalidas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 14:45:57) 
-- CODE:
x = float(input(""))
a = float(input(""))
b = float(input(""))

if ((a<= x) and (x<=b)):
	print (x, "pertence ao intervalo", a, ",", b)
elif((a>=x) and (x>=b)):
	print(x, "nao pertence ao intervalo", a, ",",b)
else:
	print("Entradas", a, ",", b, "invalidas")

	
	
	
	
	


	
-- EXECUTION TIME:
0.122289
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
Entradas 3.0 , 4.0 invalidas
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
5.5 nao pertence ao intervalo 6.5 , 3.5
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 pertence ao intervalo 1.1 , 22.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:46:18) 
-- CODE:
x = float(input(""))
a = float(input(""))
b = float(input(""))

if ((a<= x) and (x<=b)):
	print (x, "pertence ao intervalo", a, ",", b)
if((a>=x) and (x>=b)):
	print(x, "nao pertence ao intervalo", a, ",",b)
elif:
	print("Entradas", a, ",", b, "invalidas")

	
	
	
	
	


	
-- ERROR:
File "XXXX", line 9
    elif:
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:52:36) 
-- CODE:
x = float(input(""))
a = float(input(""))
b = float(input(""))

if ((a<= x) and (x<=b)):
	print (x, "pertence ao intervalo", a, ",", b)
elif((a>=x) and (x>=b)):
	print(x, "nao pertence ao intervalo", a, ",",b)
else:
	print("Entradas", a, ",", b, "invalidas")

	
	
	
	
	


	
-- OUTPUT:
Entradas 3.0 , 4.0 invalidas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:52:47) 
-- CODE:
x = float(input(""))
a = float(input(""))
b = float(input(""))

if ((a<= x) and (x<=b)):
	print (x, "pertence ao intervalo", a, ",", b)
elif((a>=x) and (x>=b)):
	print(x, "nao pertence ao intervalo", a, ",",b)
else:
	print("Entradas", a, ",", b, "invalidas")

	
	
	
	
	


	
-- OUTPUT:
Entradas 3.0 , 4.0 invalidas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:54:38) 
-- CODE:
x = float(input(""))
a = float(input(""))
b = float(input(""))

if ((a<= x) and (x<=b)):
	print (x, "pertence ao intervalo", a, ",", b)
elif((a>=x) and (x>=b)):
	print(x, "nao pertence ao intervalo", a, ",",b)
else:
	print("Entradas", a, "e", b, "invalidas")

	
	
	
	
	


	
-- OUTPUT:
Entradas 3.0 e 4.0 invalidas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 14:54:52) 
-- CODE:
x = float(input(""))
a = float(input(""))
b = float(input(""))

if ((a<= x) and (x<=b)):
	print (x, "pertence ao intervalo", a, ",", b)
elif((a>=x) and (x>=b)):
	print(x, "nao pertence ao intervalo", a, ",",b)
else:
	print("Entradas", a, "e", b, "invalidas")

	
	
	
	
	


	
-- EXECUTION TIME:
0.165318
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
Entradas 3.0 e 4.0 invalidas
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
5.5 nao pertence ao intervalo 6.5 , 3.5
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 pertence ao intervalo 1.1 , 22.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:55:10) 
-- CODE:
x = float(input(""))
a = float(input(""))
b = float(input(""))

if ((a<= x) and (x<=b)):
	print (x, "pertence ao intervalo", a, ",", b)
elif((a>=x) and (x>=b)):
	print(x, "nao pertence ao intervalo", a, ",",b)
else:
	print("Entradas", a, "e", b, "invalidas")

	
	
	
	
	


	
-- OUTPUT:
Entradas 3.0 e 4.0 invalidas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:02:51) 
-- CODE:
x = float(input(""))
a = float(input(""))
b = float(input(""))

if ((a<= x) and (x<=b)):
	print (x, "pertence ao intervalo", a, ",", b)
elif ((a>x)) and (x>b)
	print(x, "nao pertence ao intervalo", a, ",",b)
else:

	
	
	
	
	


	
-- ERROR:
File "XXXX", line 7
    elif ((a>x)) and (x>b)
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:02:58) 
-- CODE:
x = float(input(""))
a = float(input(""))
b = float(input(""))

if ((a<= x) and (x<=b)):
	print (x, "pertence ao intervalo", a, ",", b)
elif ((a>=x)) and (x>=b)
	print(x, "nao pertence ao intervalo", a, ",",b)
else:

	
	
	
	
	


	
-- ERROR:
File "XXXX", line 7
    elif ((a>=x)) and (x>=b)
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:03:08) 
-- CODE:
x = float(input(""))
a = float(input(""))
b = float(input(""))

if ((a<= x) and (x<=b)):
	print (x, "pertence ao intervalo", a, ",", b)
elif ((a >= x)) and (x >= b)
	print(x, "nao pertence ao intervalo", a, ",",b)
else:

	
	
	
	
	


	
-- ERROR:
File "XXXX", line 7
    elif ((a >= x)) and (x >= b)
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:03:18) 
-- CODE:
x = float(input(""))
a = float(input(""))
b = float(input(""))

if ((a<= x) and (x<=b)):
	print (x, "pertence ao intervalo", a, ",", b)
elif ((a >= x) and (x >= b))
	print(x, "nao pertence ao intervalo", a, ",",b)
else:

	
	
	
	
	


	
-- ERROR:
File "XXXX", line 7
    elif ((a >= x) and (x >= b))
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:04:04) 
-- CODE:
x = float(input(""))
a = float(input(""))
b = float(input(""))

if ((a<= x) and (x<=b)):
	print (x, "pertence ao intervalo", a, ",", b)
elif ((a>=x) and (x>=b))
	print(x, "nao pertence ao intervalo", a, ",",b)
else:

	
	
	
	
	


	
-- ERROR:
File "XXXX", line 7
    elif ((a>=x) and (x>=b))
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:04:28) 
-- CODE:
x = float(input(""))
a = float(input(""))
b = float(input(""))

if ((a<= x) and (x<=b)):
	print (x, "pertence ao intervalo", a, ",", b)
elif((a>x) and (x>b)):
	print(x, "nao pertence ao intervalo", a, ",",b)
else:
	print("Entradas", a, "e", b, "invalidas")

	
	
	
	
	


	
-- OUTPUT:
Entradas 3.0 e 4.0 invalidas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:05:27) 
-- CODE:
x = float(input(""))
a = float(input(""))
b = float(input(""))

if ((a<= x) and (x<=b)):
	print (x, "pertence ao intervalo", a, ",", b)
elif((a>x) and (x>b)):
	print(x, "nao pertence ao intervalo", a, ",",b)
else:
	print("Entradas", a, "e", b, "invalidas")

	
	
	
	
	


	
-- OUTPUT:
Entradas 3.0 e 4.0 invalidas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:06:37) 
-- CODE:
x = float(input(""))
a = float(input(""))
b = float(input(""))

if ((a<= x) and (x<=b)):
	print (x, "pertence ao intervalo", a, ",", b)
elif((a>x) and (x>b)):
	print(x, "nao pertence ao intervalo", a, ",",b)
elif (b>a):
	print("Entradas", a, "e", b, "invalidas")

	
	
	
	
	


	
-- OUTPUT:
Entradas 3.0 e 4.0 invalidas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:07:06) 
-- CODE:
x = float(input(""))
a = float(input(""))
b = float(input(""))

if ((a<= x) and (x<=b)):
	print (x, "pertence ao intervalo", a, ",", b)
elif((a>x) and (x>b)):
	print(x, "nao pertence ao intervalo", a, ",",b)
elif (b<=a):
	print("Entradas", a, "e", b, "invalidas")

	
	
	
	
	


	
-- OUTPUT:
Entradas 3.0 e 4.0 invalidas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:07:15) 
-- CODE:
x = float(input(""))
a = float(input(""))
b = float(input(""))

if ((a<= x) and (x<=b)):
	print (x, "pertence ao intervalo", a, ",", b)
elif((a>x) and (x>b)):
	print(x, "nao pertence ao intervalo", a, ",",b)
elif (b<=a):
	print("Entradas", a, "e", b, "invalidas")

	
	
	
	
	


	
-- EXECUTION TIME:
0.122895
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:

-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
5.5 nao pertence ao intervalo 6.5 , 3.5
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 pertence ao intervalo 1.1 , 22.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:07:29) 
-- CODE:
x = float(input(""))
a = float(input(""))
b = float(input(""))

if ((a<= x) and (x<=b)):
	print (x, "pertence ao intervalo", a, ",", b)
elif (b<=a):
	print("Entradas", a, "e", b, "invalidas")
elif((a>x) and (x>b)):
	print(x, "nao pertence ao intervalo", a, ",",b)


	
	
	
	
	


	
-- OUTPUT:
Entradas 3.0 e 4.0 invalidas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:07:47) 
-- CODE:
x = float(input(""))
a = float(input(""))
b = float(input(""))

if ((a<= x) and (x<=b)):
	print (x, "pertence ao intervalo", a, ",", b)
elif (b<=a):
	print("Entradas", a, "e", b, "invalidas")
elif((a>x) and (x>b)):
	print(x, "nao pertence ao intervalo", a, ",",b)


	
	
	
	
	


	
-- EXECUTION TIME:
0.160817
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:

-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
Entradas 6.5 e 3.5 invalidas
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 pertence ao intervalo 1.1 , 22.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:08:02) 
-- CODE:
x = float(input(""))
a = float(input(""))
b = float(input(""))

if ((a<= x) and (x<=b)):
	print (x, "pertence ao intervalo", a, ",", b)
elif (b<=a):
	print("Entradas", a, "e", b, "invalidas")
else:
	print(x, "nao pertence ao intervalo", a, ",",b)


	
	
	
	
	


	
-- OUTPUT:
2.0 nao pertence ao intervalo 3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:08:08) 
-- CODE:
x = float(input(""))
a = float(input(""))
b = float(input(""))

if ((a<= x) and (x<=b)):
	print (x, "pertence ao intervalo", a, ",", b)
elif (b<=a):
	print("Entradas", a, "e", b, "invalidas")
else:
	print(x, "nao pertence ao intervalo", a, ",",b)


	
	
	
	
	


	
-- EXECUTION TIME:
0.147077
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
2.0 nao pertence ao intervalo 3.0 , 4.0
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
Entradas 6.5 e 3.5 invalidas
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 pertence ao intervalo 1.1 , 22.2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
